removed neovim from install and uninstall srcipt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,12 @@
 		".stfolder": true,
 		"git": true,
 		"configstore": true
-	}
+	},
+	"vim.insertModeKeyBindings": [
+		{
+			"before": ["k", "j"],
+			"after": ["<Esc>"]
+		}
+	],
 }
+ 
