--- a/pwsh/starship.toml
+++ b/pwsh/starship.toml
@@ -13,6 +13,7 @@ $time\
 [](#209db6) \
 """
 
+
 # Disable the blank line at the start of the prompt
 add_newline = false
 
@@ -54,17 +55,17 @@ format = '[ $symbol $branch]($style)'
 
 [git_status]
 style = "bg:#125b69"
-format = '[$modified$untracked$renamed$deleted$staged$conflicted$ahead_behind ]($style)'
-ahead = ' ⇡${count}'
-diverged = ' ⇕⇡${ahead_count}⇣${behind_count}'
-behind = ' ⇣${count}'
-conflicted = ' 󰷋 ${count}'
-untracked = ' 󱝵 ${count}'
-stashed = ' 󰸩 ${count}'
-modified = ' 󱇨 ${count}'
+format = '[$modified$untracked$renamed$deleted$staged$conflicted$ahead_behind]($style)'
+ahead = ' ⇡$count'
+diverged = ' ⇕⇡$ahead_count⇣$behind_count'
+behind = ' ⇣$count'
+conflicted = ' 󰷋 $count'
+untracked = ' 󱝵 $count'
+stashed = ' 󰸩 $count'
+modified = ' 󱇨 $count'
 staged = '  $count'
-renamed = '  ${count}'
-deleted = ' 󱀷 ${count}'
+renamed = '  $count'
+deleted = ' 󱀷 $count'
 
 [time]
 disabled = false
