--- a/pwsh/starship.toml
+++ b/pwsh/starship.toml
@@ -63,7 +63,7 @@ format = '[ $symbol $branch]($style)'
 style = "bg:#125b69"
 format = '[$modified$untracked$renamed$deleted$staged$conflicted$ahead_behind]($style)'
 ahead = ' ⇡${count}'
-diverged = ' ⇕⇡$a{head_count}⇣${behind_count}'
+diverged = ' ⇕⇡${ahead_count}⇣${behind_count}'
 behind = ' ⇣${count}'
 conflicted = ' 󰷋 ${count}'
 untracked = ' 󱝵 ${count}'
