--- a/pwsh/starship.toml
+++ b/pwsh/starship.toml
@@ -7,8 +7,7 @@ $directory\
 [](fg:#209db6 bg:#125b69)\
 $git_branch\
 $git_status\
-[ ](bg:#125b69)\
-[](fg:#125b69 bg:#1b1e25)\
+[ ](bg:#125b69)[](fg:#125b69 bg:#1b1e25)\
 $time\
 [](fg:#1b1e25)
 [](#209db6) \
@@ -61,17 +60,23 @@ format = '[ $symbol $branch]($style)'
 
 [git_status]
 style = "bg:#125b69"
-format = '[$modified$untracked$renamed$deleted$staged$conflicted$ahead_behind]($style)'
-ahead = ' ⇡${count}'
-diverged = ' ⇕⇡${ahead_count}⇣${behind_count}'
-behind = ' ⇣${count}'
-conflicted = ' 󰷋 ${count}'
-untracked = ' 󱝵 ${count}'
-stashed = ' 󰸩 ${count}'
-modified = ' 󱇨 ${count}'
-staged = '  ${count}'
-renamed = '  ${count}'
-deleted = ' 󱀷 ${count}'
+format = "[$modified$untracked$renamed$deleted$staged$conflicted$ahead_behind]($style)"
+diverged = " ⇕⇡${ahead_count}⇣${behind_count}"
+conflicted = " 󰷋 ${count}"
+ahead = " ⇡${count}"
+behind = " ⇣${count}"
+untracked = " 󱝵 ${count}"
+stashed = " 󰸩 ${count}"
+modified = " 󱇨 ${count}"
+staged = "  ${count}"
+renamed = "  ${count}"
+deleted = " 󱀷 ${count}"
+
+
+[git_metrics]
+added_style = "bold blue"
+format = "[+$added]($added_style)/[-$deleted]($deleted_style) "
+disabled = false
 
 [time]
 disabled = false
