removed errors.log

--- a/glazewm/config.yaml
+++ b/glazewm/config.yaml
@@ -213,7 +213,7 @@ keybindings:
 
   # Minimize focused window.
   - commands: ['toggle-minimized']
-    bindings: ['alt+m']
+    bindings: []
 
   # Close focused window.
   - commands: ['close']
