--- a/glazewm/config.yaml
+++ b/glazewm/config.yaml
@@ -127,20 +127,20 @@ window_rules:
         window_class: { regex: 'HwndWrapper' }
 
 binding_modes:
-  # When enabled, the focused window can be resized via arrow keys or HJKL.
-  - name: 'resize'
-    keybindings:
-      - commands: ['resize --width -2%']
-        bindings: ['h', 'left']
-      - commands: ['resize --width +2%']
-        bindings: ['l', 'right']
-      - commands: ['resize --height +2%']
-        bindings: ['k', 'up']
-      - commands: ['resize --height -2%']
-        bindings: ['j', 'down']
-      # Press enter/escape to return to default keybindings.
-      - commands: ['wm-disable-binding-mode --name resize']
-        bindings: ['escape', 'enter']
+  # # When enabled, the focused window can be resized via arrow keys or HJKL.
+  # - name: 'resize'
+  #   keybindings:
+  #     - commands: ['resize --width -2%']
+  #       bindings: ['h', 'left']
+  #     - commands: ['resize --width +2%']
+  #       bindings: ['l', 'right']
+  #     - commands: ['resize --height +2%']
+  #       bindings: ['k', 'up']
+  #     - commands: ['resize --height -2%']
+  #       bindings: ['j', 'down']
+  #     # Press enter/escape to return to default keybindings.
+  #     - commands: ['wm-disable-binding-mode --name resize']
+  #       bindings: ['escape', 'enter']
 
   # When enabled, all keybindings are disabled except for alt+shift+p which
   # returns to default keybindings.
@@ -152,23 +152,23 @@ binding_modes:
 keybindings:
   # Shift focus in a given direction.
   - commands: ['focus --direction left']
-    bindings: ['alt+left']
+    bindings: ['alt+a']
   - commands: ['focus --direction right']
-    bindings: ['alt+right']
+    bindings: ['alt+d']
   - commands: ['focus --direction up']
-    bindings: ['alt+up']
+    bindings: ['alt+w']
   - commands: ['focus --direction down']
-    bindings: ['alt+down']
+    bindings: ['alt+s']
 
   # Move focused window in a given direction.
   - commands: ['move --direction left']
-    bindings: ['alt+shift+left']
+    bindings: ['alt+shift+a']
   - commands: ['move --direction right']
-    bindings: ['alt+shift+right']
+    bindings: ['alt+shift+d']
   - commands: ['move --direction up']
-    bindings: ['alt+shift+up']
+    bindings: ['alt+shift+w']
   - commands: ['move --direction down']
-    bindings: ['alt+shift+down']
+    bindings: ['alt+shift+s']
 
   # Resize focused window by a percentage or pixel amount.
   - commands: ['resize --width -2%']
@@ -192,12 +192,12 @@ keybindings:
 
   # Change tiling direction. This determines where new tiling windows will
   # be inserted.
-  - commands: ['toggle-tiling-direction']
-    bindings: ['alt+v']
+  # - commands: ['toggle-tiling-direction']
+  #   bindings: ['alt+v']
 
   # Change focus from tiling windows -> floating -> fullscreen.
-  - commands: ['wm-cycle-focus']
-    bindings: ['alt+space']
+  # - commands: ['wm-cycle-focus']
+  #   bindings: ['alt+space']
 
   # Change the focused window to be floating.
   - commands: ['toggle-floating --centered']
@@ -212,8 +212,8 @@ keybindings:
     bindings: ['alt+f']
 
   # Minimize focused window.
-  - commands: ['toggle-minimized']
-    bindings: ['alt+m']
+  # - commands: ['toggle-minimized']
+  #   bindings: ['alt+m']
 
   # Close focused window.
   - commands: ['close']
@@ -228,8 +228,8 @@ keybindings:
     bindings: ['alt+shift+r']
 
   # Redraw all windows.
-  - commands: ['wm-redraw']
-    bindings: ['alt+shift+w']
+  # - commands: ['wm-redraw']
+  #   bindings: ['alt+shift+w']
 
   # Launch CMD terminal. Alternatively, use `shell-exec wt` or
   # `shell-exec %ProgramFiles%/Git/git-bash.exe` to start Windows
@@ -238,14 +238,14 @@ keybindings:
     bindings: ['alt+enter']
 
   # Focus the next/previous workspace defined in `workspaces` config.
-  - commands: ['focus --next-workspace']
-    bindings: ['alt+s']
-  - commands: ['focus --prev-workspace']
-    bindings: ['alt+a']
+  # - commands: ['focus --next-workspace']
+  #   bindings: ['alt+s']
+  # - commands: ['focus --prev-workspace']
+  #   bindings: ['alt+a']
 
   # Focus the workspace that last had focus.
-  - commands: ['focus --recent-workspace']
-    bindings: ['alt+d']
+  # - commands: ['focus --recent-workspace']
+  #   bindings: ['alt+d']
 
   # Change focus to a workspace defined in `workspaces` config.
   - commands: ['focus --workspace 1']
@@ -269,14 +269,14 @@ keybindings:
 
   # Move the focused window's parent workspace to a monitor in a given
   # direction.
-  - commands: ['move-workspace --direction left']
-    bindings: ['alt+shift+a']
-  - commands: ['move-workspace --direction right']
-    bindings: ['alt+shift+f']
-  - commands: ['move-workspace --direction up']
-    bindings: ['alt+shift+d']
-  - commands: ['move-workspace --direction down']
-    bindings: ['alt+shift+s']
+  # - commands: ['move-workspace --direction left']
+  #   bindings: ['alt+shift+a']
+  # - commands: ['move-workspace --direction right']
+  #   bindings: ['alt+shift+f']
+  # - commands: ['move-workspace --direction up']
+  #   bindings: ['alt+shift+d']
+  # - commands: ['move-workspace --direction down']
+  #   bindings: ['alt+shift+s']
 
   # Move focused window to a workspace defined in `workspaces` config.
   - commands: ['move --workspace 1', 'focus --workspace 1']
