--- a/glazewm/config.yaml
+++ b/glazewm/config.yaml
@@ -99,7 +99,11 @@ window_behavior:
 
 workspaces:
   - name: '1'
+    display_name: "Vertical"
+    bind_to_monitor: 0
+    keep_alive: true
   - name: '2'
+    keep_alive: true
   - name: '3'
   - name: '4'
   - name: '5'
