--- a/glazewm/config.yaml
+++ b/glazewm/config.yaml
@@ -99,16 +99,24 @@ window_behavior:
 
 workspaces:
   - name: '1'
+    bind_to_monitor: 0
     keep_alive: true
   - name: '2'
-    keep_alive: true
+    bind_to_monitor: 1
   - name: '3'
+    bind_to_monitor: 1
   - name: '4'
+    bind_to_monitor: 1
   - name: '5'
+    bind_to_monitor: 1
   - name: '6'
+    bind_to_monitor: 1
   - name: '7'
+    bind_to_monitor: 1
   - name: '8'
+    bind_to_monitor: 1
   - name: '9'
+    bind_to_monitor: 1
 
 window_rules:
   - commands: ['ignore']
