--- a/glazewm/mybuild11/config.yaml
+++ b/glazewm/mybuild11/config.yaml
@@ -1,11 +1,11 @@
 general:
   # Commands to run when the WM has started. This is useful for running a
   # script or launching another application.
-  # Example: The below command launches Zebar.
-  startup_commands: []
+  startup_commands: [
+    'shell-exec %USERCONFIG_FREEMAKER%/glazewm/mybuild11/startup.bat'
+  ]
 
   # Commands to run just before the WM is shutdown.
-  # Example: The below command kills Zebar.
   shutdown_commands: []
 
   # Commands to run after the WM config is reloaded.
