--- a/config
+++ b/config
@@ -2,4 +2,6 @@
 
 SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
+export PATH="${SCRIPT_DIR}/lua:$PATH"
+
 ${SCRIPT_DIR}/lua-config/bin/lua-config "$@"
