--- a/.luarc.json
+++ b/.luarc.json
@@ -3,6 +3,8 @@
     "runtime.version": "Lua 5.4",
     "diagnostics.globals": [
         "vim",
-        "fatal"
+        "fatal",
+        "portable",
+        "verbose"
     ]
 }
