--- a/glazewm/mybuild11/config.yaml
+++ b/glazewm/mybuild11/config.yaml
@@ -129,7 +129,9 @@ window_rules:
 
   - commands: ['move --workspace 9']
     match:
-      - window_title: { regex: 'Steam.*' }
+      - window_title: { equals: 'Steam' }
+
+      - window_process: { equals: 'Steam WebHelper Client' }
 
   - commands: ['move --workspace 0']
     match:
