added lua-term (tools/term.lua)

--- a/.luarc.json
+++ b/.luarc.json
@@ -5,7 +5,8 @@
         "vim",
         "fatal",
         "portable",
-        "verbose"
+        "verbose",
+        "terminal"
     ],
     "workspace.library": [
         "lua-config"
