--- a/glazewm/mybuild11/config.yaml
+++ b/glazewm/mybuild11/config.yaml
@@ -218,8 +218,8 @@ keybindings:
     bindings: ['alt+shift+space']
 
   # Change the focused window to be tiling.
-  - commands: ['toggle-tiling']
-    bindings: ['alt+t']
+  #  - commands: ['toggle-tiling']
+  # bindings: ['alt+t']
 
   # Change the focused window to be fullscreen.
   - commands: ['toggle-fullscreen']
