--- a/glazewm/mybuild11/config.yaml
+++ b/glazewm/mybuild11/config.yaml
@@ -248,7 +248,7 @@ keybindings:
   # Launch CMD terminal. Alternatively, use `shell-exec wt` or
   # `shell-exec %ProgramFiles%/Git/git-bash.exe` to start Windows
   # Terminal and Git Bash respectively.
-  - commands: ['shell-exec C:\Users\oskar\AppData\Local\Programs\Warp\warp.exe']
+  - commands: ['shell-exec wt']
     bindings: ['alt+q']
 
   # Focus the next/previous workspace defined in `workspaces` config.
