--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -13,5 +13,5 @@ opacity = 0.8
 dynamic_title = true
 
 [font]
-normal= { family = "JetBrainsMono Nerd Font Mono", style = "Regular" }
+normal= { family = "JetBrainsMono Nerd Font", style = "Regular" }
 
