--- a/glazewm/mybuild11/config.yaml
+++ b/glazewm/mybuild11/config.yaml
@@ -124,6 +124,7 @@ window_rules:
   - commands: ['move --workspace 1']
     match:
       - window_process: { equals: 'Discord' }
+      - window_process: { equals: 'ClickUp' }
 
   - commands: ['move --workspace 9']
     match:
