--- a/glazewm/portable/config.yaml
+++ b/glazewm/portable/config.yaml
@@ -224,7 +224,7 @@ keybindings:
   # Launch CMD terminal. Alternatively, use `shell-exec wt` or
   # `shell-exec %ProgramFiles%/Git/git-bash.exe` to start Windows
   # Terminal and Git Bash respectively.
-  - commands: ['shell-exec alacritty']
+  - commands: ['shell-exec powershell']
     bindings: ['alt+q']
 
   # Focus the next/previous workspace defined in `workspaces` config.
