--- a/editor/zed/settings.json
+++ b/editor/zed/settings.json
@@ -41,15 +41,15 @@
   "languages": {
     "Python": {
       "indent_guides": {
-        "coloring": "disabled",
-        "background_coloring": "indent_aware"
+        "coloring": "indent_aware",
+        "background_coloring": "disabled"
       }
     }
   },
   "indent_guides": {
-    "active_line_width": 3,
-    "line_width": 1,
-    "coloring": "indent_aware"
+    "active_line_width": 4,
+    "line_width": 2,
+    "coloring": "fixed"
   },
   "current_line_highlight": "gutter",
 
