--- a/editor/zed/settings.json
+++ b/editor/zed/settings.json
@@ -7,23 +7,23 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "git_panel": {
-    "dock": "right"
-  },
   "disable_ai": true,
 
   // panels
+  "git_panel": {
+    "button": false,
+  },
   "collaboration_panel": {
-    "button": false
+    "button": false,
   },
   "outline_panel": {
-    "button": false
+    "button": false,
   },
   "project_panel": {
-    "dock": "right"
+    "dock": "right",
   },
   "notification_panel": {
-    "dock": "right"
+    "dock": "right",
   },
 
   // search and scans
@@ -34,32 +34,32 @@
     "**/.hg",
     "**/CVS",
     "**/Thumbs.db",
-    "**/.DS_Store"
+    "**/.DS_Store",
   ],
 
   // code stuff
   "inlay_hints": {
-    "enabled": true
+    "enabled": true,
   },
   "languages": {
     "Python": {
       "indent_guides": {
         "coloring": "indent_aware",
-        "background_coloring": "disabled"
-      }
-    }
+        "background_coloring": "disabled",
+      },
+    },
   },
   "indent_guides": {
     "active_line_width": 4,
     "line_width": 2,
-    "coloring": "fixed"
+    "coloring": "fixed",
   },
   "current_line_highlight": "gutter",
 
   // diagnositc data
   "telemetry": {
     "diagnostics": false,
-    "metrics": false
+    "metrics": false,
   },
 
   // ui
@@ -68,24 +68,24 @@
   "theme": {
     "mode": "dark",
     "light": "One Light",
-    "dark": "Colorizer Pro"
+    "dark": "Colorizer Pro",
   },
   "buffer_font_family": "JetBrainsMono Nerd Font",
   "ui_font_family": "JetBrainsMono Nerd Font",
   "ui_font_features": {
-    "calt": true
+    "calt": true,
   },
   "buffer_font_features": {
-    "calt": true
+    "calt": true,
   },
 
   // terminal
   "terminal": {
     "shell": {
-      "program": "pwsh"
-    }
+      "program": "pwsh",
+    },
   },
 
   // other
-  "ensure_final_newline_on_save": true
+  "ensure_final_newline_on_save": true,
 }
