zed: inlay hints

--- a/editor/zed/settings.json
+++ b/editor/zed/settings.json
@@ -40,8 +40,11 @@
 
   // code stuff
   "inlay_hints": {
-    "show_parameter_hints": true,
     "enabled": true,
+    "show_type_hints": true,
+    "show_parameter_hints": true,
+    "show_other_hints": true,
+    "show_background": true,
   },
   "languages": {
     "Python": {
